Improve the solution for scrolling the results table horizontally by applying the `overflow-x:auto` to the table wrapper. In the workbench this wasn't needed because there were some local to the workbench styling fixing it, but in the component it didn't worked quite as expected. This new addition would make the component look better when used standalone in other projects.

--- a/ontotext-yasgui-web-component/src/components/ontotext-yasgui-web-component/ontotext-yasgui-web-component.scss
+++ b/ontotext-yasgui-web-component/src/components/ontotext-yasgui-web-component/ontotext-yasgui-web-component.scss
@@ -172,9 +172,13 @@
     }
 
     /* Make the datatable horizontally scrollable when there is not enough space to fit the columns */
-    table.dataTable  {
+    .dataTables_wrapper  {
       width: 100%;
-      table-layout: auto;
+      overflow-x: auto;
+
+      table.dataTable  {
+        table-layout: auto;
+      }
     }
 
     table.dataTable thead th {
